# vibecheck-ai

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: bench.py
deploy/: k8s.yaml
docs/: architecture.md  dev-log-2026-07-15.md  dev-log-2026-07-16.md  dev-log-2026-07-17.md  dev-log-2026-07-20.md  dev-log-2026-07-21.md  dev-log-2026-07-22.md
frontend/: .env.example  Dockerfile  README.md  next.config.js  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: Alerts.tsx  AreaChart.tsx  Kpis.tsx  Roadmap.tsx
frontend/lib/: api.ts
infra/: README.md  main.tf  outputs.tf  variables.tf
monitoring/: grafana-dashboard.json  grafana-dashboards.yml  prometheus.yml
scripts/: generate_mock_tickets.py
tests/: test_api_cli.py  test_clustering.py  test_core_nlp.py  test_enrichment_cache.py  test_pipeline_services.py  test_store.py
vibecheck/: __init__.py  cli.py  config.py  engine.py  errors.py  logging_setup.py  mockdata.py  pipeline.py
vibecheck/core/: __init__.py  cache.py  clustering.py  embeddings.py  enrichment.py  models.py  noise.py  tokenizer.py  vectorindex.py
vibecheck/services/: __init__.py  agent.py  analytics.py  api.py  dashboard.py  ingestion.py  queue.py  worker_entry.py
vibecheck/storage/: __init__.py  store.py
