[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vibecheck-ai"
version = "0.1.0"
description = "AI-powered customer feedback & product analytics engine — turns unstructured feedback into an auto-updating roadmap"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Akhil Vase" }]
keywords = ["nlp", "clustering", "customer-feedback", "product-analytics", "llm", "embeddings", "fastapi"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Intended Audience :: Developers",
]
dependencies = []

[project.optional-dependencies]
server = ["fastapi>=0.110", "uvicorn[standard]>=0.29", "pydantic>=2.6"]
ml = ["sentence-transformers>=2.6", "hdbscan>=0.8.33", "numpy>=1.24"]
llm = ["anthropic>=0.25", "instructor>=1.0"]
queue = ["celery>=5.3", "redis>=5.0"]
vector = ["qdrant-client>=1.8"]
dev = ["pytest>=8.0", "pytest-cov>=4.1", "ruff>=0.4", "mypy>=1.9"]
all = [
  "fastapi>=0.110", "uvicorn[standard]>=0.29", "pydantic>=2.6",
  "sentence-transformers>=2.6", "hdbscan>=0.8.33", "numpy>=1.24",
  "anthropic>=0.25", "instructor>=1.0", "celery>=5.3", "redis>=5.0",
  "qdrant-client>=1.8",
]

[project.urls]
Homepage = "https://github.com/avase33/vibecheck-ai"
Repository = "https://github.com/avase33/vibecheck-ai"
Issues = "https://github.com/avase33/vibecheck-ai/issues"

[project.scripts]
vibecheck = "vibecheck.cli:main"

[tool.setuptools.packages.find]
include = ["vibecheck*"]

[tool.setuptools.package-data]
vibecheck = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501", "B008"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
